--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="src/main.js" defer ></script>
 </head>
 <body>
+    <div class="header">
+        <img src="img/My-Hero-Academia-Logo-2014.png">
+        <h1>Memory Card Game</h1>
+    </div>
     <div class="main_container">
         <div id="card-board">
             
