--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <img src="img/My-Hero-Academia-Logo-2014.png">
         <h1>Memory Card Game</h1>
     </div>
+    <div class="btn">
+        <button type="button" class="refresh">Refresh</button>
+    </div>
     <div class="main_container">
         <div id="card-board">
             
