--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="img/My-Hero-Academia-Logo-2014.png">
         <h1>Memory Card Game</h1>
     </div>
-    <div class="btn">
+    <div id="btn">
         <button type="button" class="refresh">Refresh</button>
     </div>
     <div class="main_container">
